repos/emily-python/contents/test/parser/fail/importBlankTarget.em
# Import malformed 1

# Arg: --ast2
# Expect failure

from a import
